DB-9283 Join should not be considered between a query and its non flattened subquery